# LinkCut

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: orchestation.yml  release.yml
LinkCut/: .env  manage.py
LinkCut/LinkCut/: asgi.py  settings.py  urls.py  wsgi.py
LinkCut/authentication/: models.py  permissions.py  serializers.py  urls.py  views.py
LinkCut/cuturl/: apps.py  models.py  serializers.py  urls.py  views.py
LinkCut/cuturl/static/cuturl/css/: style.css
LinkCut/templates/: base.html
templateproject/: __init__.py
